Fixed the bug on Flipping boxes on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -21,14 +21,25 @@
   
   .backface-hidden {
     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
   }
   
   .transform-style-3d {
     transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
   }
   
   .rotate-y-180 {
     transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
+  }
+
+  /* Hover styles only for non-touch devices */
+  @media (hover: hover) and (pointer: fine) {
+    .group:hover .group-hover\:rotate-y-180 {
+      transform: rotateY(180deg);
+      -webkit-transform: rotateY(180deg);
+    }
   }
 }
 
